fix: Fix issues with title button ordering and spacing when in a button
Jira Issue DD-2173

--- a/css/searchPanes.foundation.scss
+++ b/css/searchPanes.foundation.scss
@@ -5,6 +5,10 @@ button.dtsp-showAll {
     margin-left: 3px;
 }
 
+button.dtsp-collapseAll {
+    margin-right: 1px !important;
+}
+
 div.dt-button-collection {
     div.dtsp-panesContainer {
         width: 100%;
